	* A new LFO to be controlled via Freq, not Tempo
	* Removed usage of Jack library
	* VCO2 CV as well... to be used as modulator
	* LFO Tempo Divider goes from 1/128 to 32 and is displayed as such in Dial
	* A few bug fixes
	* New examples
	* Bug fix: default resonance value in vcf.ttl
	* VC to HZ and HZ to VC: all input/output as VC
	* VCA for CV

0.1.4:
	* LFO frequency now represented as Tempo and Multiplier
	* Beat Repeater doesn't crash if parameters changed while repeating
	* A small plugin to convert Ingen Control to VC ('0 to 1' to '-1 to 1')

0.1.3:
	* Fix in Sample&Hold ttl
	* Fix in Presets

0.1.2:
	* VCF Resonance filter bug fix
	* Optimization in wscript
	* Trashy DownSampler
	* Granulator
	* Mixer 2 channels
	* BeatRepeater Stereo & Mono
	* BeatSlice Stereo & Mono
	* Percussive Envelope bug fix

0.1.1:
	* New presets
	* GUI fixes for VCO2

0.1.0:
	* Plugins using CV
	* Plugins with updated GUI
	* David Robillard Patch:
		* Fixed several errors and typos discovered by sord_validate.
		* Clean up port names (unfortunately some symbols are pretty weird too but changing this would break compatibility), use label conventions consistent with fomp
		* Describe project separately and link plugins to it (one description of maintainer etc., and now validates)
		* Make ports with scale points enumerations so a combo box will be shown in hosts (including Ingen)
		* Categorized plugins and remove references to non-existent classes.  I added lv2:EnvelopePlugin for this, it will be included in the next spec release
		* "Envelop" => "Envelope
	* Dial to react to mouse scroll

0.0.9:
	* Migrated the code to lvtk (lvtoolkitorg)
	* Starting not to use Gtk Builder
	* Using Luppp Dial for GUI
	* Non Linear Dial (very dirty method)
	* Remove JACKLFO (not necessary, using LV2 Time)
	* LFO frequency can be set manually or in sync with LV2 Time
	* Tranches plugin now using LV2 Time

0.0.8:
	* VCF GUI
	* Ported from AMS:
		- Ring Modulator
		- Sample&Hold