@@ -129,24 +129,15 @@
 	] , [
 	  	a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 7 ;
-		lv2:symbol "harmonic" ;
-		lv2:name "Harmonic" ;
-		lv2:default 1 ;
-		lv2:minimum 1 ;
-		lv2:maximum 16 ;
+		lv2:symbol "semitone" ;
+		lv2:name "Semitone" ;
+		lv2:default 0 ;
+		lv2:minimum 0 ;
+		lv2:maximum 12 ;
 		pg:group <http://avwlv2.sourceforge.net/plugins/avw/vco2_cv#group_frequency> ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 8 ;
-		lv2:symbol "subharmonic" ;
-		lv2:name "Subharmonic" ;
-		lv2:default 1 ;
-		lv2:minimum 1 ;
-		lv2:maximum 16 ;
-		pg:group <http://avwlv2.sourceforge.net/plugins/avw/vco2_cv#group_frequency> ;
-	] ,	[
-	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 9 ;
 		lv2:symbol "pw0" ;
 		lv2:name "PW0" ;
 		lv2:default 0.5 ;
@@ -155,13 +146,22 @@
 		pg:group <http://avwlv2.sourceforge.net/plugins/avw/vco2_cv#group_pw_phase> ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 10 ;
+		lv2:index 9 ;
 		lv2:symbol "pwGain" ;
 		lv2:name "PW Gain" ;
 		lv2:default 0 ;
 		lv2:minimum 0 ;
 		lv2:maximum 1 ;
 		pg:group <http://avwlv2.sourceforge.net/plugins/avw/vco2_cv#group_pw_phase> ;
+	] ,	[
+	  	a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 10 ;
+		lv2:symbol "edge" ;
+		lv2:name "Edge" ;
+		lv2:default 1 ;
+		lv2:minimum 1 ;
+		lv2:maximum 10 ;
+		pg:group <http://avwlv2.sourceforge.net/plugins/avw/vco2_audio#group_pw_phase> ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 11 ;
