@@ -26,10 +26,10 @@ enum p_port_enum {
   p_waveForm,
   p_octave,
   p_tune,
-  p_harmonic,
-  p_subharmonic,
+  p_semitone,
   p_pw0,
   p_pwGain,
+  p_edge,
   p_phi0,
   p_expFMGain,
   p_linFMGain,
@@ -45,10 +45,10 @@ static const peg_data_t p_ports[] = {
   { 0, 6, 0, 0, 0, 0 }, 
   { 0, 6, 3, 0, 0, 0 }, 
   { 0, 1, 0, 0, 0, 0 }, 
-  { 1, 16, 1, 0, 0, 0 }, 
-  { 1, 16, 1, 0, 0, 0 }, 
+  { 0, 12, 0, 0, 0, 0 }, 
   { 0.1, 0.9, 0.5, 0, 0, 0 }, 
   { 0, 1, 0, 0, 0, 0 }, 
+  { 1, 10, 1, 0, 0, 0 }, 
   { 0, 6.283, 0, 0, 0, 0 }, 
   { 0, 10, 0, 0, 0, 0 }, 
   { 0, 10, 0, 0, 0, 0 }, 
